# ultimate-ai-assistant

./: .env.example  .gitignore  README.md  manage_users.py  pyproject.toml  start_with_ngrok.py
app/: __main__.py  a2a_agent_executor.py  a2a_client.py  a2a_server.py  config.py  credentials.py  database.py  main.py  user_env.py
app/assistant/: __init__.py  a2a_client.py  a2a_config.py  agent.py  prompt.py
app/assistant/sub_agents/: __init__.py
app/assistant/sub_agents/calendar_agent/: __init__.py  agent.py  prompt.py
app/assistant/sub_agents/gmail_agent/: __init__.py  agent.py  prompt.py
app/assistant/sub_agents/task_management_agent/: __init__.py  agent.py  prompt.py
app/assistant/tools/: __init__.py  a2a_tools.py  calendar_utils.py  document_tools.py  file_tools.py
app/assistant/utils/: __init__.py  data_extractor.py  session_memory_manager.py  zep_memory_service.py
app/static/: index.html
app/static/js/: app.js  dither-background.js
documentation/: README.md  architecture.md  installation.md  sub-agents.md  user-environment.md
tests/: test_data_extractor.py
user_data/: .env.template
user_data/gmail_credentials/: README.md
